# yes_we_kan

./: .gitignore  README.md  pyproject.toml
yes_we_kan/: __init__.py  chebyshev_KAN.py  fourier_KAN.py
