[tool.poetry]
name = "yes-we-kan"
version = "0.1.0"
description = "Implementations of KAN and various extension in FLAX, JAX."
authors = ["marlinfiggins <marlinfiggins@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jax = "^0.4.27"
flax = "^0.8.3"
optax = "^0.2.2"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
